Service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: "Backend-MBTI-service"
  namespace: "MBTI-EK8s"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "MBTI-Backend"
