Service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: "Frontend-MBTI-service"
  namespace: "MBTI-EK8s"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "MBTI-Frontend"
